# xwing2

./: CMakeLists.txt  README  XWing2.pro
data/: test.xw2  test2.xw2
src/: airfoil.cxx  airfoil.h  flatpanel.cxx  flatpanel.h  geometrymodel.cxx  geometrymodel.h  geometrysegment.cxx  geometrysegment.h  geometrystation.cxx  geometrystation.h  geometrywing.cxx  geometrywing.h  global.cxx  global.h  guiextend.cxx  guiextend.h  main.cxx  mainwindow.cxx  mainwindow.geometry.cxx  mainwindow.global.cxx  mainwindow.graphics.cxx  mainwindow.h  mainwindow.modeling.cxx  mainwindow.ui  sourcedoubletmodel.cxx  sourcedoubletmodel.h  spline.cxx  spline.h  streamline.cxx  streamline.h  vector.cxx  vector.h  vortexlatticemodel.cxx  vortexlatticemodel.h  wakestripe.cxx  wakestripe.h
